--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "fs": "^0.0.1-security",
     "ical": "^0.8.0",
     "iconv-lite": "^0.6.3",
-    "multer": "^1.4.5-lts.1",
-    "open": "^9.1.0"
+    "multer": "^1.4.5-lts.1"
   },
   "description": ""
 }
